Bug 555452 Mail List Dialog header sections should use <hbox align=end> instead of spacers to align the labels r=Mnyromyr sr=Neil; a=Standard8 for checkin to CLOSED TREE
--HG--
rename : mailnews/addrbook/content/abListOverlay.xul => suite/mailnews/addrbook/abListOverlay.xul

--- a/suite/themes/classic/messenger/addressbook/cardDialog.css
+++ b/suite/themes/classic/messenger/addressbook/cardDialog.css
@@ -50,6 +50,10 @@
   width: 42ch;
 }
 
+.CardEditLabel {
+  text-align: end;
+}
+
 .PhoneEditWidth {
   width: 24ch;
 }
